BZ 1006347  move the "real" start scripts into bin/internal. The scripts in bin/ are obsoleted versions that spit out errors and exit codes so people know not to use them.